# mqo-eval

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  agents.yaml  deny.toml  pyproject.toml
.github/workflows/: ci.yml
.pybuilder/: intent-card.json  metrics.json
.pybuilder/receipts/: audit.json  ci-checks.json  intake.json  proof.json  reviewer.json  scaffold-integrity.json
agent/: AUTOBUILDER_PROGRAM.md  intent-card.json
buildloop/: bl-lib.sh  bl-status.sh  docker-local.env  ledger.md  preflight.sh  run-eval-and-digest.sh  run-eval-once.sh
contract/: agent-answer.schema.json
corpus/: gold_docker-local.json  tpcds_sql_derived_limited.yaml
corpus/rule_violations/: cases.yaml  rules.yaml
reports/: sonnet-tpcds-limited-20q-2026-06-22.md
scripts/: mint-gold.py  run-metrics.sh
src/: compare.rs  lib.rs  main.rs  oracle.rs  pgwire.rs  run.rs  summary.rs  types.rs
src/mqo_eval/: __init__.py  cli.py  contract.py  corpus.py  history.py  oracle_cli.py  oracle_pgwire.py  oracle_precomputed.py  record.py  registry.py  rule_ci_floor.py  rule_harness.py  runner.py  scoring.py  stub_agent.py
src/mqo_eval/agents/: claude_oauth_agent.py  oai_agent.py  replay_agent.py
src/report/: html.rs  markdown.rs  mod.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_archive.rs  acceptance_md_summary.rs  acceptance_report.rs  mocks.rs  proptest_invariants.rs  test_acceptance.py  test_claude_oauth_agent.py  test_oai_agent.py  test_oracle_cli.py  test_oracle_pgwire.py  test_replay_agent.py  test_rule_harness.py  test_runner_integration.py  test_scoring.py  test_trace_capture.py
tests/mocks/: ac_template.rs
