[project]
name = "mqo-eval"
version = "0.2.0"
description = "API-free, handle-scoring MQO eval harness"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
mqo-eval = "mqo_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mqo_eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["mqo_eval"]
branch = true

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-pyyaml",
    "types-jsonschema",
]
